# Research_Agent

./: .gitignore  FLOW.md  README.md
Backend/: .env  api.py  auth.db  auth.py  pyproject.toml  research_research.db  research_research.db-shm  research_research.db-wal
Frontend/: README.md  index.html  metadata.json  vite.config.ts
Frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
Frontend/src/components/: ChatMessage.tsx  SearchInput.tsx  Sidebar.tsx  StarterCards.tsx  TopBar.tsx
Frontend/src/context/: AuthContext.tsx
Frontend/src/pages/: AuthPage.tsx
